src/test/ui/retslot-cast.stderr
error[E0308]: mismatched types
  --> $DIR/retslot-cast.rs:13:5
   |
LL |     inner(x)
   |     ^^^^^^^^ expected trait `std::iter::Iterator<Item = ()>`, found trait `std::iter::Iterator<Item = ()> + std::marker::Send`
   |
   = note: expected enum `std::option::Option<&dyn std::iter::Iterator<Item = ()>>`
              found enum `std::option::Option<&dyn std::iter::Iterator<Item = ()> + std::marker::Send>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
